[project]
name = "message_hub_server_api"
version = "0.1.0"
description = "Message Hub Server API for Message Hub, a package for building REST APIs with Python 3.11+."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = 'Tiago Schulz', email = 'contato@gridwise.com.br' }]

[tool.taskipy.tasks]
lint = "ruff check . && ruff check . --diff"
format = "ruff check . --fix --select I && ruff format ."

